--- a/skript.tex
+++ b/skript.tex
@@ -1120,7 +1120,7 @@ Es seien $\sigma,\tau\in S_n$ beliebig. Dann gilt
 	
 	\begin{ex}
 	\begin{enumerate}
-		\item Der Satz von Cayley ergibt einen Invektiven Homomorphismus.
+		\item Der Satz von Cayley ergibt einen Injektiven Homomorphismus.
 		$$G \to S_G$$
 		$$a \mapsto \lambda_a$$
 		wobei
@@ -1559,11 +1559,11 @@ Aus der Tatsache, dass $S_n$ nicht auflösbar ist für $n \geq 5$ folgt, dass so
 
 \subsection{Abelsche Gruppen}
 
-Im Folgenden, wird die Notation $(G,+)$ - additive Verknüpfung -  für abelsche Gruppen verwendet.
+Im Folgenden wird die Notation $(G,+)$ -- additive Verknüpfung -- für abelsche Gruppen verwendet.
 
 \underline{Wiederholung}: $(H_i)_{i \in I}$ Familie von abelschen Gruppen.
 
-Direktes Produkt: $\prod_{i \in I} \to (h_i)_{i \in I}$ mit $h_i \in H_i \forall i \in I$.
+Direktes Produkt: $\prod_{i \in I} \to (h_i)_{i \in I}$ mit $h_i \in H_i \; \forall i \in I$.
 
 \begin{defn}
   Die (äußere) direkte Summe der Familie $(H_i)_{i \in I}$ von abelschen Gruppen ist 
@@ -1578,8 +1578,7 @@ Direktes Produkt: $\prod_{i \in I} \to (h_i)_{i \in I}$ mit $h_i \in H_i \forall
 Wie im Fall der direkten Produkte zeigt man das Folgende:
 
 \begin{thm}
-  Es sei $(H_i)_{i \in I}$
-ne Familie von Untergruppen einer abelschen Gruppe $G$. Dann sind die folgenden Aussagen äquivalent
+  Es sei $(H_i)_{i \in I}$ eine Familie von Untergruppen einer abelschen Gruppe $G$. Dann sind die folgenden Aussagen äquivalent
 \begin{itemize}
   \item[(i)]  $G$ wird durch $\cup_{i \in I} H_i$ erzeugt und für jedes $i_0 \in I$ gilt 
     \[ H_{i_0} \cap \langle \bigcup_{i \neq i_0} H_i \rangle = \left\{ 0 \right\}. \]
